syntax = "proto3";

package greet;

option java_package = "com.charlesluxinger.grpc";
option java_multiple_files = true;

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message LongGreetRequest {
  Greeting greeting = 1;
}

message LongGreetResponse {
  string result = 1;
}

service GreetService {
  rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {};
}